--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -31,7 +31,7 @@
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:padding="5dp"
         android:scaleType="centerInside"
-        android:src="@drawable/cart"
+        android:src="@drawable/ic_cart"
         app:layout_constraintBottom_toBottomOf="@+id/searchViewFood"
         app:layout_constraintEnd_toStartOf="@+id/iBtnChatWithShop"
         app:layout_constraintHorizontal_bias="0.5"
