--- a/app/src/main/res/layout/item_rv_checkout.xml
+++ b/app/src/main/res/layout/item_rv_checkout.xml
@@ -21,7 +21,7 @@
             android:layout_height="50dp"
             android:contentDescription="Ảnh món ăn"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_food" />
+            android:src="@drawable/im_food_default" />
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
