--- a/app/src/main/res/layout/item_rv_food.xml
+++ b/app/src/main/res/layout/item_rv_food.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_food"/>
+            android:src="@drawable/im_food_default"/>
     </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
