--- a/app/src/main/res/layout/item_rv_section_item.xml
+++ b/app/src/main/res/layout/item_rv_section_item.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/img_food" />
+                android:src="@drawable/im_food_default" />
 
             <TextView
                 android:id="@+id/textViewStar"
