--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -146,7 +146,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/edtPassword"
+                    android:id="@+id/etPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
