refactor(auth): split login/register into MVVM structure
Signed-off-by: ptlong14 <thanhlong01042004@gmail.com>

--- a/app/src/main/res/layout/xxx_activity_admin_add_food.xml
+++ b/app/src/main/res/layout/xxx_activity_admin_add_food.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    tools:context=".AdminAddFood"
+    tools:context=".AdminAddFoodTest"
     android:padding="16dp">
 
     <LinearLayout
