feat(auth): add reset password and forgot password features styles(logo): update logo app
Signed-off-by: ptlong14 <thanhlong01042004@gmail.com>

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,8 +5,41 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/im_yummy_bg"
-    tools:context=".presentation.ui.LoginActivity">
+    tools:context=".presentation.ui.ChangePasswordActivity">
+
+    <FrameLayout
+        android:id="@+id/frame_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FDCF53"
+            android:gravity="center"
+            android:paddingVertical="30dp"
+            android:text="Đổi mật khẩu"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iBtnBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/bg_search_view"
+            android:clickable="true"
+            android:contentDescription="Back"
+            android:focusable="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:padding="8dp"
+            android:src="@drawable/im_arrow_back"
+            app:tint="#FF5722" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,51 +52,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/frame_header"
         app:layout_constraintVertical_bias="0.065">
-
-        <TextView
-            style="@style/loginSubHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Chào mừng bạn đến với!" />
-        <TextView
-            style="@style/loginHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
-            android:text="Yummy" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textOldPassword"
             style="@style/parent"
-
             android:layout_marginTop="@dimen/loginViewsMargin">
 
             <EditText
-                android:id="@+id/etEmail"
+                android:id="@+id/etOldPassword"
                 style="@style/modifiedEditText"
-                android:hint="Email"
-                android:background="@drawable/bg_search_view"
-                android:inputType="textEmailAddress"
+                android:hint="Mật khẩu cũ"
+                android:inputType="textPassword"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputPassword"
+            android:id="@+id/textNewPassword"
             style="@style/parent"
             android:layout_marginTop="@dimen/loginViewsMargin">
 
             <EditText
-                android:id="@+id/etPassword"
+                android:id="@+id/etNewPassword"
                 style="@style/modifiedEditText"
-                android:hint="Mật khẩu"
+                android:hint="Mật khẩu mới"
                 android:inputType="textPassword"
-                android:background="@drawable/bg_search_view"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputConfirmPassword"
             style="@style/parent"
@@ -72,45 +89,17 @@
             <EditText
                 android:id="@+id/etConfirmPassword"
                 style="@style/modifiedEditText"
-                android:hint="Nhập lại mật khẩu"
+                android:hint="Nhập lại mật khẩu mới"
                 android:inputType="textPassword"
-                android:background="@drawable/bg_search_view"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnRegister"
-            android:background="@drawable/button_v2"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:textColor="#FFF"
+            android:id="@+id/btnSubmit"
+            style="@style/loginButton"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/loginViewsMargin"
             android:padding="16dp"
-            android:text="Đăng ký" />
-
-        <TextView
-            android:id="@+id/tvLogin"
-            style="@style/parent"
-            android:layout_marginTop="2dp"
-            android:paddingVertical="10dp"
-            android:text="Đã có tài khoản? Đăng nhập ngay ➜"
-            android:textAlignment="textEnd"
-            android:textColor="#000000"
-            android:textSize="15dp"
-            android:textStyle="bold" />
-
+            android:text="Cập nhật" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/im_yummy_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
