fix(auth): prevent access to feature when user is not logged in
Signed-off-by: ptlong14 <thanhlong01042004@gmail.com>

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -82,14 +82,14 @@
                     android:layout_height="wrap_content"
                     android:textColor="#353434"
                     android:textStyle="bold"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:layout_gravity="center"
                     android:text="Giỏ hàng trống rồi."/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#5F5F5F"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:layout_gravity="center"
                     android:text="Lướt Yummy, lựa hàng ngay đi!"/>
                 <androidx.appcompat.widget.AppCompatButton
