--- a/app/src/main/res/layout/xxx_activity_admin_add_food.xml
+++ b/app/src/main/res/layout/xxx_activity_admin_add_food.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     tools:context=".AdminAddFoodTest"
+    android:paddingBottom="200dp"
     android:padding="16dp">
 
     <LinearLayout
