--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/im_yummy_bg"
-    tools:context=".presentation.ui.LoginActivity">
+    tools:context=".presentation.ui.RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
