--- a/app/src/main/res/layout/bottom_sheet_food.xml
+++ b/app/src/main/res/layout/bottom_sheet_food.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="600dp"
@@ -10,8 +9,7 @@
     android:padding="16dp"
     android:id="@+id/mainContainer"
     android:clipToPadding="false"
-    android:overScrollMode="never"
-    >
+    android:overScrollMode="never">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -113,12 +111,13 @@
                        android:backgroundTint="#FF5722"
                         android:contentDescription="Giảm" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/tvQuantity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="8dp"
                         android:text="1"
+                        android:inputType="number"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
