--- a/app/src/main/res/layout/item_rv_cart.xml
+++ b/app/src/main/res/layout/item_rv_cart.xml
@@ -78,7 +78,7 @@
             android:textSize="12sp"
             android:textStyle="bold" />
 
-        <TextView
+        <EditText
             android:id="@+id/tvQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
