--- a/app/src/main/res/layout/bottom_sheet_food.xml
+++ b/app/src/main/res/layout/bottom_sheet_food.xml
@@ -151,19 +151,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnAddToCart"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thêm vào giỏ hàng"
                 android:textAllCaps="false"
-                android:backgroundTint="#FF9800"
-                android:textColor="@android:color/white"
+                android:background="@drawable/button_v1"
+                android:textColor="#FF5722"
                 android:elevation="2dp"
                 android:layout_marginEnd="8dp"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnBuyNow"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -171,6 +171,7 @@
                 android:text="Mua ngay"
                 android:textAllCaps="false"
                 android:backgroundTint="#FF5722"
+                android:background="@drawable/button_v2"
                 android:textColor="@android:color/white"
                 android:elevation="2dp"
                 android:layout_marginStart="8dp"/>
